--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,6 @@ buildscript {
 
 dependencies {
     compile "ch.qos.logback:logback-classic:$logbackVersion"
-    compile "org.projectlombok:lombok:$lombokVersion"
+//    compile "org.projectlombok:lombok:$lombokVersion"
     testCompile "junit:junit:$junitVersion"
 }
