对接了图灵机器人

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,3 +2,9 @@ bots{
   location = "./bots" # 所有机器人的知识默认所在的路径
   default = "xiatian" # 默认的机器人
 }
+
+http.port = 6666
+
+bot.turing.apikey = "xxxx"
+bot.turing.userid = "xxxx"
+bot.turing.enabled = true
