--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,8 +3,24 @@ bots{
   default = "xiatian" # 默认的机器人
 }
 
+db.mysql.default {
+  url = "jdbc:mysql://localhost/law?useUnicode=true&characterEncoding=UTF-8"
+  driver = "com.mysql.jdbc.Driver"
+  user = "root"
+  password = ""
+}
+
+db.mysql.law {
+  url = "jdbc:mysql://localhost/law?useUnicode=true&characterEncoding=UTF-8"
+  driver = "com.mysql.jdbc.Driver"
+  user = "root"
+  password = ""
+}
+
 http.port = 6666
 
 bot.turing.apikey = "xxxx"
 bot.turing.userid = "xxxx"
 bot.turing.enabled = true
+bot.faq.enabled = true
+bot.law.enabled = true
